# cppgit

./: .gitignore  CMakeLists.txt  CppGit.cpp  README.md  main.cpp
cmake/Modules/: Findlibgit2.cmake
include/: CppGit.h
